# Yggdrasilleon

./: .gitignore  CMakeLists.txt  README.md  snapcraft.yaml
debian/: changelog  control  debhelper-build-stamp  dirs  files  install  yggdrasilleon.substvars
debian/.debhelper/yggdrasilleon/: dbgsym-build-ids
debian/.debhelper/yggdrasilleon/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/yggdrasilleon/dbgsym-root/usr/share/doc/: yggdrasilleon-dbgsym
debian/yggdrasilleon/DEBIAN/: control  md5sums
debian/yggdrasilleon/usr/share/doc/yggdrasilleon/: copyright
resources/: Yggdrasilleon.desktop
src/: Algorithms.cpp  Algorithms.hpp  Graph.cpp  Graph.hpp  GraphWidget.cpp  GraphWidget.hpp  MainWindow.cpp  MainWindow.hpp  ManPageTexts.cpp  ManPageTexts.hpp  ThemeManager.cpp  ThemeManager.hpp  main.cpp
